test/error/generic_not_instantiated.colgm
func foo<T>(a: T) {
    a;
}

struct bar<T> {
    a: T
}

func main() -> i32 {
    foo(0);

    var b = bar {};
    b.a;
    return 0;
}