test/error/generic_not_instantiated.result
Error: cannot instantiate generic type "foo" without generic arguments
  --> test/error/generic_not_instantiated.colgm:10:5
   | 
10 |     foo(0);
   |     ^^^

Error: cannot instantiate generic type "bar" without generic arguments
  --> test/error/generic_not_instantiated.colgm:12:13
   | 
12 |     var b = bar {};
   |             ^^^